--- a/css/style.scss
+++ b/css/style.scss
@@ -74,10 +74,10 @@ h1 {
         justify-content: center;
         align-items: center;
         background-color: #F2F2F2;
-        h3 {
+        & h3 {
             margin-left: 17%;
         }
-        p {
+        & p {
             margin-left: 20%;
             margin-right: 3%;
         }
