--- a/css/accueil.css
+++ b/css/accueil.css
@@ -8,6 +8,10 @@ h1 {
   font-family: "Shrikhand", cursive;
 }
 
+a {
+  text-decoration: none;
+}
+
 @media (max-width: 768px) {
   html {
     margin: 0;
@@ -16,6 +20,9 @@ h1 {
     font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
+  }
+  .h h1 {
+    font-family: "Shrikhand", cursive;
   }
   .h__localisation {
     display: flex;
@@ -87,60 +94,41 @@ h1 {
     align-items: center;
   }
   .restaurants {
-    width: 100%;
     background-color: #F2F2F2;
+    margin-left: 5%;
   }
   .restaurants__carte {
-    width: 100%;
-    height: 35%;
+    width: 95%;
+    background-color: white;
     border-radius: 20px 20px 20px 20px;
-    position: relative;
+    box-shadow: 0px 0px 7px 0px;
+    border: 3px solid black;
+    margin-bottom: 5%;
+  }
+  .restaurants__carte::before {
+    content: "Nouveau";
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgb(136, 226, 0);
+    color: green;
+    box-shadow: 1px 1px 20px black;
   }
   .restaurants__img {
-    overflow: hidden;
-  }
-  .restaurants__img img {
-    width: 100%;
-    border-radius: 20px 20px 20px 20px;
     -o-object-fit: cover;
        object-fit: cover;
-  }
-  .restaurants__carte_bas {
-    margin-top: 20%;
-  }
-  .restaurants {
+    height: 250px;
     width: 100%;
-    background-color: #F2F2F2;
   }
-  .restaurants .carte_restaurant {
-    width: 100%;
-    height: 35%;
-    border-radius: 20px 20px 20px 20px;
-    position: relative;
+  .restaurants__carte__bas {
+    margin-top: 3%;
+    margin-bottom: 15%;
   }
-  .restaurants .carte_restaurant .img_carte {
-    overflow: hidden;
+  .restaurants__carte__bas h3 {
+    margin-bottom: 0%;
   }
-  .restaurants .carte_restaurant .img_carte img {
-    width: 100%;
-    border-radius: 20px 20px 20px 20px;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .restaurants .carte_restaurant .img_carte .bas_carte {
-    margin-top: 20%;
-  }
-  .restaurants .carte_restaurant_nouveau ::after {
-    content: "Nouveau";
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: absolute;
-    font-size: 14px;
-    font-weight: 600;
-    color: #299077;
-    background-color: #99e2d0;
-    gap: 0;
+  .restaurants__carte__bas p {
+    margin-top: 0%;
   }
   footer {
     background-color: rgb(44, 40, 40);
@@ -148,14 +136,9 @@ h1 {
     flex-direction: column;
     color: white;
   }
-  footer img {
-    color: white;
-    width: 30%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    padding-top: 5%;
-    margin-bottom: 5%;
-    margin-left: 5%;
+  footer h3 {
+    font-family: "Shrikhand", cursive;
+    margin-left: 15%;
   }
   footer i {
     margin-right: 4%;
@@ -164,31 +147,16 @@ h1 {
     margin-left: 5%;
     margin-top: 4%;
   }
-  .header_francaise {
-    display: flex;
-  }
-  .header_francaise img {
-    width: 55%;
-    margin-left: 15%;
-    margin-top: 5%;
-  }
-  .header_francaise a {
-    margin-top: 8%;
-    color: rgb(85, 84, 84);
-    margin-left: 5%;
-  }
-  .header_francaise a :hover {
-    color: #9356DC;
-  }
-  .background {
-    background-image: url("../images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-    width: 80%;
-  }
-  .titre {
-    display: flex;
-    justify-content: space-around;
-  }
-  .titre i {
-    padding-top: 8%;
-  }
-}/*# sourceMappingURL=style.css.map */
+}
+.background {
+  background-image: url("../images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+  width: 80%;
+}
+
+.titre {
+  display: flex;
+  justify-content: space-around;
+}
+.titre i {
+  padding-top: 8%;
+}/*# sourceMappingURL=accueil.css.map */
