--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -2,6 +2,7 @@ body {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -11,9 +12,209 @@ a {
     text-decoration: none;
 }
 
-@media (max-width: 768px) {
+//  VERSION DESKTOP
+
+.h {
+    & h1 {
+        font-family: 'Shrikhand', cursive;
+        display: flex;
+        justify-content: center;
+        text-shadow: 1px 1px 1px #9356DC;
+        font-size: 300%;
+        padding-top: 1%;
+    }
+    &__localisation {
+        display: flex;
+        justify-content: center;
+        border-top: 2px solid #FF79DA;
+        border-bottom: 2px solid #FF79DA;
+        box-shadow: 0px 0px 10px 0px #9356DC;
+        text-shadow: 1px 1px 1px #9356DC;
+        width: 100%;
+        height: 80px;
+        margin-top: 3%;
+        padding-right: 5%; 
+    }
+    &__icon {
+        padding-top: 1.5%;
+        margin-right: 2%;
+    }
+    & p {
+        padding-top: 0.7%;
+    }
+}
+
+.recherche_restaurant {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+    & button {
+        padding: 1%;
+        border-radius: 30px 30px 30px 30px;
+        background: linear-gradient(#FF79DA, #9356DC);
+        color: white;
+        border: none;
+        margin-bottom: 2%;
+        box-shadow: 0px 10px 10px 0px;
+        &:hover {
+            background: linear-gradient(#f7a4df, #af7eec);
+        }
+    }
+}
+
+.fonctionnement {
+    &__flex {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    & h1 {
+        display: flex;
+        justify-content: center;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        border-top: 2px solid #FF79DA;
+        border-bottom: 2px solid #FF79DA;
+        box-shadow: 0px 0px 10px 0px #9356DC;
+        text-shadow: 1px 1px 1px #9356DC;
+        letter-spacing: 3px;        
+    }
+    &__carte {
+        display: flex;
+        flex-direction: row;
+        background-color: #F2F2F2;
+        border-radius: 20px 20px 20px 20px;
+        box-shadow: 0px 0px 7px 0px;
+        width: 27%;
+        margin-top: 5%;
+        margin-bottom: 5%;
+        margin-right: 3%;
+        margin-left: 2%;
+        &:hover {
+            background-color: #e2d5f1;
+        }
+    }
+    &__icon {
+        padding-top: 4.5%;
+        margin-right: 5%;
+        margin-left: 5%;
+        color: grey;
+        &:hover {
+            color: #9356DC;
+        }
+    }
+    &__numero {
+        background-color: #9356DC;
+        border-radius: 50%;
+        color: white;
+        width: 30px;
+        position: relative;
+        left: -15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.restaurants {
+    width: 100%;
+    background-color: #F2F2F2;
+    & h1 {        
+        padding-top: 3%;
+        padding-bottom: 2%;
+        font-size: 80px;
+        display: flex;
+        justify-content: center;
+        text-shadow: 1px 1px 1px #9356DC;
+    }
+    &__flex {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-left: 10%;
+    }
+    &__carte {
+        width: 40%;
+        height: 450px;
+        background-color: white;
+        border-radius: 20px 20px 20px 20px;
+        box-shadow: 0px 0px 7px 0px;
+        margin-bottom: 5%;
+        margin-left: 3%;
+        position: relative;
+    }      
+    &__img {
+        object-fit: cover;
+        height: 350px;
+        width: 100%;
+        object-position: 70% 63%;
+        border-radius: 20px 20px 0px 0px;
+    }
+    &__carte__bas {
+        margin-bottom: 1%;
+        margin-left: 3%;
+        margin-right: 3%;
+        display: flex;
+        justify-content: space-between;
+        & h3 {
+            margin-bottom: 0%;
+        }
+        & p {
+            margin-top: 0%;
+        }
+        & i {
+            width: 50px;
+            padding-top: 6%;
+            
+        }
+    }
+
+    .nouveau {
+        &::before {
+            content: "Nouveau";
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            padding: 2%;
+            font-weight: bold;
+            background-color: rgb(123, 246, 209);
+            color: green;
+        }
+    }    
+}
+
+
+footer {
+    background-color: rgb(44, 40, 40);
+    display: flex;
+    flex-direction: column;
+    color: white;
+    h3 {
+        font-family: 'Shrikhand', cursive ;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    i {
+        margin-right: 0.5%;
+    }
+    a {
+        margin-left: 4%;
+        margin-top: 1%;
+    }
+}
+
+
+
+@media screen and (max-width: 768px) {
 
 // SMARTPHONE PAGE ACCUEIL
+
+    h1 {
+        font-family: 'Shrikhand', cursive;
+    }
 
     html {
         margin: 0;
@@ -49,14 +250,17 @@ a {
     .h {
         & h1 {
             font-family: 'Shrikhand', cursive;
+            text-shadow: none;
+            padding-top: 0%;
         }
         &__localisation {
-            display: flex;
-            justify-content: center;
+            border: none;
+            text-shadow: none;
             background-color: rgb(230, 225, 225);
             box-shadow: 0px 0px 10px 0px;
             width: 100%;
-            margin-top: 5%;
+            height: 60px;
+            margin-top: 7%;
             padding-right: 5%; 
         }
         &__icon {
@@ -84,12 +288,24 @@ a {
     }
 
     .fonctionnement {
+        &__flex {
+            display: block;
+        }
+        & h1 {
+            display: block;
+            border: none;
+            box-shadow: none;
+            text-shadow: none;
+            letter-spacing: 0px;
+            margin-left: 5%;
+        }
         &__carte {
             display: flex;
             flex-direction: row;
             background-color: #F2F2F2;
             border-radius: 20px 20px 20px 20px;
             box-shadow: 0px 0px 7px 0px;
+            width: 80%;
             margin-top: 10%;
             margin-left: 10%;
             margin-bottom: 15%;
@@ -98,7 +314,7 @@ a {
             }
         }
         &__icon {
-            padding-top: 6%;
+            padding-top: 7%;
             margin-right: 5%;
             margin-left: 5%;
             color: grey;
@@ -110,7 +326,6 @@ a {
             background-color: #9356DC;
             border-radius: 50%;
             color: white;
-            width: 20px;
             position: relative;
             left: -15px;
             display: flex;
@@ -120,40 +335,66 @@ a {
     }
     
     .restaurants {
-        // width: 100%;
-        background-color: #F2F2F2;
-        margin-left: 5%;
+        & h1 {
+            display: block;
+            border: none;
+            box-shadow: none;
+            text-shadow: none;
+            letter-spacing: 0px;
+            font-size: 30px;
+            margin-left: 5%;
+
+        }
+        &__flex {
+            margin-left: 3%;
+            margin-right: 3%;
+        }
         &__carte {
             width: 95%;
-            // height: 250px;
+            height: 250px;
             background-color: white;
             border-radius: 20px 20px 20px 20px;
             box-shadow: 0px 0px 7px 0px;
-            border: 3px solid black;
             margin-bottom: 5%;
+            position: relative;
+        }      
+        &__img {
+            object-fit: cover;
+            height: 180px;
+            width: 100%;
+            object-position: 70% 63%;
+            border-radius: 20px 20px 0px 0px;
+        }
+        &__carte__bas {
+            margin-bottom: 3%;
+            margin-left: 3%;
+            margin-right: 3%;
+            display: flex;
+            justify-content: space-between;
+            & h3 {
+                margin-bottom: 0%;
+                margin-top: 5%;
+            }
+            & p {
+                margin-top: 0%;
+            }
+            & i {
+                width: 50px;
+                padding-top: 8%;
+                
+            }
+        }
+
+        .nouveau {
             &::before {
                 content: "Nouveau";
                 position: absolute;
                 top: 10px;
                 right: 10px;
-                background-color: rgb(136, 226, 0);
+                padding: 2%;
+                font-weight: bold;
+                background-color: rgb(123, 246, 209);
                 color: green;
-                box-shadow: 1px 1px 20px black;
-            }
-        }
-        &__img {
-            object-fit: cover;
-            height: 250px;
-            width: 100%;
-        }
-        &__carte__bas {
-            margin-top: 3%;
-            margin-bottom: 15%;
-            & h3 {
-                margin-bottom: 0%;
-            }
-            & p {
-                margin-top: 0%;
             }
         }
     }
@@ -166,7 +407,8 @@ a {
         color: white;
         h3 {
             font-family: 'Shrikhand', cursive ;
-            margin-left: 15%;
+            display: block;
+            margin-left: 7%;
         }
         i {
             margin-right: 4%;
@@ -178,21 +420,33 @@ a {
     }
 }
 
-    // PAGE A LA FRANCAISE 
+@media all and (min-width: 768px) and (max-width: 992px) {
+    // VERSION TABLETTE
 
-
-    .background {
-        background-image: url("../images/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-        width: 80%;
-    }
-
-    .titre {
-        display: flex;
-        justify-content: space-around;
-        i {
-            padding-top: 8%;
+    .fonctionnement {
+        &__carte {
+            margin-bottom: 2%;
+        }
+        &__icon {
+            padding-top: 9%;
         }
     }
+
+    .restaurants {
+        &__carte {
+            height: 250px;
+        }
+        &__img {
+            height: 180px;
+        }
+        &__carte__bas {
+            margin-left: 5%;
+            & h3 {
+                margin-top: 4%;
+            }
+        }
+    }
+}
 
     
 
