--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -1,5 +1,219 @@
-
+// VERSION DESKTOP
 
 body {
-    color: red;
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-family: 'Shrikhand', cursive;
+}
+
+
+.h_restaurants {
+    display: flex;
+    flex-direction: row;
+    &__titre {
+    font-size: 80px;
+    margin-left: 35%;
+    text-shadow: 1px 1px 1px #9356DC;
+    }
+    &__fleche {
+        padding-top: 5%;
+        padding-left: 5%;
+        font-weight: bold;
+    }
+}
+
+.bg_image{
+    max-width: 100%;
+    max-height: 32rem;
+    width: 100%;
+    object-fit: cover;    
+}
+.titre {
+    font-size: 50px;
+    display: flex;
+    justify-content: space-around;
+    i {
+        padding-top: 6%;
+    }
+}
+
+.carte {
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 0px 0px 15px 0px;
+    padding-top: 1px;
+    margin-bottom: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    & h3 {
+        margin-bottom: 0%;
+        margin-left: 2%;
+    }
+    &__prix {
+        display: flex;
+        justify-content: space-between;
+        margin-left: 2%;
+        margin-right: 2%;
+        p {
+            margin-top: 1%;
+        }
+    }
+}
+
+.titre_plat {
+    margin-left: 4%;
+}
+
+
+.bouton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    input {
+        padding: 2%;
+        border-radius: 60px 60px 60px 60px;
+        background: linear-gradient(#FF79DA, #9356DC);
+        color: white;
+        border: none;
+        margin-bottom: 5%;
+        box-shadow: 0px 10px 10px 0px;
+        font-size: 200%;
+        &:hover {
+            background: linear-gradient(#f7a4df, #af7eec);
+        }
+    }
+}
+
+footer {
+    background-color: rgb(44, 40, 40);
+    display: flex;
+    flex-direction: column;
+    color: white;
+    h3 {
+        font-family: 'Shrikhand', cursive ;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    i {
+        margin-right: 0.5%;
+    }
+    a {
+        margin-left: 4%;
+        margin-top: 1%;
+    }
+}
+
+
+
+
+
+@media (max-width: 768px) {
+
+h1 {
+    font-family: 'Shrikhand', cursive;
+}
+
+
+.h_restaurants {
+    display: flex;
+    flex-direction: row;
+    &__titre {
+    font-size: 30px;
+    margin-left: 20%;
+    text-shadow: none;
+    }
+    &__fleche {
+        padding-top: 9%;
+        padding-left: 5%;
+        font-weight: bold;
+    }
+}
+
+.bg_image{
+    max-width: 100%;
+    max-height: 32rem;
+    width: 100%;
+    object-fit: cover;    
+}
+
+.titre {
+    font-size: 18px;
+    i {
+        padding-top: 10%;
+    }
+}
+
+.carte {
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 0px 0px 15px 0px;
+    padding-top: 1px;
+    margin-bottom: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    & h3 {
+        margin-bottom: 0%;
+        margin-left: 2%;
+    }
+    &__prix {
+        display: flex;
+        justify-content: space-between;
+        margin-left: 2%;
+        margin-right: 2%;
+        p {
+            margin-top: 1%;
+        }
+    }
+}
+
+.titre_plat {
+    margin-left: 5%;
+}
+
+
+.bouton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    input {
+        padding: 5%;
+        border-radius: 30px 30px 30px 30px;
+        background: linear-gradient(#FF79DA, #9356DC);
+        color: white;
+        border: none;
+        margin-bottom: 5%;
+        box-shadow: 0px 10px 10px 0px;
+        font-size: 100%;
+    }
+}
+
+footer {
+    background-color: rgb(44, 40, 40);
+    display: flex;
+    flex-direction: column;
+    color: white;
+    h3 {
+        font-family: 'Shrikhand', cursive ;
+        margin-left: 6%;
+    }
+    i {
+        margin-right: 4%;
+    }
+    a {
+        margin-left: 5%;
+        margin-top: 4%;
+    }
+}
+
+.francaise .palette .delice .enchante {
+    margin-top: -4rem;
+    border-radius: 2rem 2rem 0 0;
+    background-color: #f6f6f6;
+    z-index: 1;
+    position: relative;
+}
 }
