--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-    font-family: 'Shrikhand', cursive;
+    font-family: 'Shrikhand', sans-serif;
 }
 
 
@@ -16,9 +16,9 @@ h1 {
     display: flex;
     flex-direction: row;
     &__titre {
-    font-size: 80px;
-    margin-left: 35%;
-    text-shadow: 1px 1px 1px #9356DC;
+        font-size: 80px;
+        margin-left: 35%;
+        text-shadow: 1px 1px 1px #9356DC;
     }
     &__fleche {
         padding-top: 5%;
@@ -31,12 +31,15 @@ h1 {
     max-width: 100%;
     max-height: 32rem;
     width: 100%;
+    min-width: 360px ;
     object-fit: cover;    
 }
+
 .titre {
     font-size: 50px;
     display: flex;
     justify-content: space-around;
+    border-radius: 40px 40px 40px 40px;
     i {
         padding-top: 6%;
     }
@@ -44,11 +47,16 @@ h1 {
 
 .carte {
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 0px 0px 15px 0px;
+    box-shadow: 5px 5px 15px 0px #dedddd;
+    max-height: 100px;
     padding-top: 1px;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     margin-left: 3%;
     margin-right: 3%;
+    overflow: hidden;
+    // Carractéristiques animation affichage plats
+    animation-name: affichage;
+    animation-duration: 2s;
     & h3 {
         margin-bottom: 0%;
         margin-left: 2%;
@@ -61,11 +69,67 @@ h1 {
         p {
             margin-top: 1%;
         }
+        & .animation_check {
+            background-color: #99E2D0;
+            width: 100px;
+            height: 100px;
+            margin-top: -47px;
+            margin-right: -140px;
+            margin-left: 0%;
+            border-radius: 0px 20px 20px 0px; 
+            // overflow: hidden;
+            // transform: scale(.1);
+            // transform: rotate(-90deg);
+            // transition: transform 500ms ease-in-out;
+        }
+        & i {
+            color: white;
+            display: flex;
+            justify-content:center;
+            align-items: center;
+            padding-top: 50px;
+        
+        }
+    }
+    &:hover .animation_check {
+        margin-right: -40px;
+        // transform: rotate(360deg);
+        // transition: transform 500ms ease-in-out;
+       } 
+
+    &:hover i {
+        transform: scale(0);
+        animation: rotation 2s;
+    }
+
+    @keyframes rotation {
+        0% {
+            transform: scale(0) rotate(0deg);
+        }
+        100% {
+            transform: scale(1) rotate(360deg);
+        }
+    }
+
+    
+
+
+
+//  Animation affichage plat
+@keyframes affichage {
+    0% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    100% {
+        transform: rotateY(0);
+        opacity: 1;
     }
 }
 
 .titre_plat {
     margin-left: 4%;
+    margin-bottom: 0%;
 }
 
 
@@ -80,12 +144,45 @@ h1 {
         color: white;
         border: none;
         margin-bottom: 5%;
+        margin-top: 4%;
         box-shadow: 0px 10px 10px 0px;
         font-size: 200%;
         &:hover {
             background: linear-gradient(#f7a4df, #af7eec);
         }
     }
+}
+
+section {
+    margin-top: -4rem;
+    border-radius: 50px 50px 0 0;
+    background-color: #f6f6f6;
+    z-index: 1;
+    position: relative;
+}
+
+.trait_entrees {
+    background-color: #99E2D0;
+    width: 45px;
+    height: 4px;
+    margin-bottom: 2%;
+    margin-left: 4%;
+}
+
+.trait_plats {
+    background-color: #99E2D0;
+    width: 38px;
+    height: 4px;
+    margin-bottom: 2%;
+    margin-left: 4%;
+}
+
+.trait_desserts {
+    background-color: #99E2D0;
+    width: 45px;
+    height: 4px;
+    margin-bottom: 2%;
+    margin-left: 4%;
 }
 
 footer {
@@ -108,15 +205,9 @@ footer {
     }
 }
 
-
-
-
+//  VERSION MOBILE 
 
 @media (max-width: 768px) {
-
-h1 {
-    font-family: 'Shrikhand', cursive;
-}
 
 
 .h_restaurants {
@@ -141,6 +232,11 @@ h1 {
     object-fit: cover;    
 }
 
+.img_enchante {
+    max-height: 15rem;
+    object-position: 70% 77%;
+}
+
 .titre {
     font-size: 18px;
     i {
@@ -150,11 +246,15 @@ h1 {
 
 .carte {
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 0px 0px 15px 0px;
+    box-shadow: 5px 5px 15px 0px #dedddd;
     padding-top: 1px;
     margin-bottom: 5%;
     margin-left: 3%;
     margin-right: 3%;
+    overflow: hidden;
+    cursor: pointer;
+    animation-name: affichage;
+    animation-duration: 2s;
     & h3 {
         margin-bottom: 0%;
         margin-left: 2%;
@@ -168,10 +268,29 @@ h1 {
             margin-top: 1%;
         }
     }
+    &:hover {
+        & .animation_check {
+            margin-right: -15px;
+            margin-left: 5px;
+        }
+    }
+}
+
+@keyframes affichage {
+    0% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    100% {
+        transform: rotateY(0);
+        opacity: 1;
+    }
 }
 
 .titre_plat {
     margin-left: 5%;
+    margin-bottom: 0%;
+    margin-top: 10%;
 }
 
 
@@ -185,7 +304,8 @@ h1 {
         background: linear-gradient(#FF79DA, #9356DC);
         color: white;
         border: none;
-        margin-bottom: 5%;
+        margin-bottom: 12%;
+        margin-top: 12%;
         box-shadow: 0px 10px 10px 0px;
         font-size: 100%;
     }
@@ -209,11 +329,57 @@ footer {
     }
 }
 
-.francaise .palette .delice .enchante {
+section {
     margin-top: -4rem;
-    border-radius: 2rem 2rem 0 0;
+    border-radius: 50px 50px 0 0;
     background-color: #f6f6f6;
     z-index: 1;
     position: relative;
+
+}
+
+.trait_entrees {
+    background-color: #99E2D0;
+    width: 45px;
+    height: 4px;
+    margin-bottom: 5%;
+    margin-left: 5%;
+}
+
+.trait_plats {
+    background-color: #99E2D0;
+    width: 38px;
+    height: 4px;
+    margin-bottom: 5%;
+    margin-left: 5%;
+}
+
+.trait_desserts {
+    background-color: #99E2D0;
+    width: 45px;
+    height: 4px;
+    margin-bottom: 5%;
+    margin-left: 5%;
+}
+}
+
+//  VERSION TABLETTE
+
+@media all and (min-width: 768px) and (max-width: 992px) {
+
+    .h_restaurants {
+        &__titre {
+            margin-left: 23%;
+        }
+    }
+
+    .carte {
+      &:hover {
+        & .animation_check {
+            margin-right: -18px;
+        }
+      }
+    }
+
 }
 }
