--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -15,11 +15,11 @@ h1 {
 }
 .h_restaurants__titre {
   font-size: 80px;
-  margin-left: 35%;
+  margin-left: 25%;
   text-shadow: 1px 1px 1px #9356DC;
 }
 .h_restaurants__fleche {
-  padding-top: 5%;
+  padding-top: 10%;
   padding-left: 5%;
   font-weight: bold;
 }
@@ -40,10 +40,12 @@ h1 {
   border-radius: 40px 40px 40px 40px;
 }
 .titre i {
-  padding-top: 6%;
+  padding-top: 11%;
 }
 
 .carte {
+  display: flex;
+  justify-content: space-between;
   border-radius: 20px 20px 20px 20px;
   box-shadow: 5px 5px 15px 0px #dedddd;
   max-height: 100px;
@@ -57,89 +59,82 @@ h1 {
   -webkit-animation-duration: 2s;
           animation-duration: 2s;
 }
+.carte__texte {
+  width: 50%;
+}
+.carte p {
+  margin-left: 2%;
+}
 .carte h3 {
   margin-bottom: 0%;
   margin-left: 2%;
 }
 .carte__prix {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  width: 50%;
   margin-left: 2%;
-  margin-right: 2%;
 }
-.carte__prix p {
-  margin-top: 1%;
+.carte__prix .price {
+  margin-top: 3%;
+  margin-right: 3%;
+  font-weight: bold;
 }
 .carte__prix .animation_check {
+  width: 80px;
   background-color: #99E2D0;
-  width: 100px;
-  height: 100px;
-  margin-top: -47px;
-  margin-right: -140px;
-  margin-left: 0%;
+  height: 100%;
   border-radius: 0px 20px 20px 0px;
+  margin-right: -80px;
 }
-.carte__prix i {
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 50px;
+.carte__prix .animation_check .i_check {
+  display: grid;
+  place-items: center;
+  padding-top: 40px;
 }
 .carte:hover .animation_check {
-  margin-right: -40px;
+  margin-right: 0%;
 }
-.carte:hover i {
-  transform: scale(0);
-  -webkit-animation: rotation 2s;
-          animation: rotation 2s;
+.carte:hover .animation_check .fas {
+  transform: rotate(-360deg);
+  transition: transform 500ms;
 }
-@-webkit-keyframes rotation {
-  0% {
-    transform: scale(0) rotate(0deg);
-  }
-  100% {
-    transform: scale(1) rotate(360deg);
-  }
+.carte i {
+  color: white;
 }
-@keyframes rotation {
-  0% {
-    transform: scale(0) rotate(0deg);
-  }
-  100% {
-    transform: scale(1) rotate(360deg);
-  }
-}
+
 @-webkit-keyframes affichage {
   0% {
-    transform: translateY(20px);
+    transform: translateY(0);
     opacity: 0;
   }
   100% {
-    transform: rotateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
+
 @keyframes affichage {
   0% {
-    transform: translateY(20px);
+    transform: translateY(0);
     opacity: 0;
   }
   100% {
-    transform: rotateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
-.carte .titre_plat {
+.titre_plat {
   margin-left: 4%;
   margin-bottom: 0%;
 }
-.carte .bouton {
+
+.bouton {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.carte .bouton input {
+.bouton input {
   padding: 2%;
   border-radius: 60px 60px 60px 60px;
   background: linear-gradient(#FF79DA, #9356DC);
@@ -150,90 +145,98 @@ h1 {
   box-shadow: 0px 10px 10px 0px;
   font-size: 200%;
 }
-.carte .bouton input:hover {
+.bouton input:hover {
   background: linear-gradient(#f7a4df, #af7eec);
 }
-.carte section {
+
+section {
   margin-top: -4rem;
   border-radius: 50px 50px 0 0;
   background-color: #f6f6f6;
   z-index: 1;
   position: relative;
 }
-.carte .trait_entrees {
+
+.trait_entrees {
   background-color: #99E2D0;
   width: 45px;
   height: 4px;
   margin-bottom: 2%;
   margin-left: 4%;
 }
-.carte .trait_plats {
+
+.trait_plats {
   background-color: #99E2D0;
   width: 38px;
   height: 4px;
   margin-bottom: 2%;
   margin-left: 4%;
 }
-.carte .trait_desserts {
+
+.trait_desserts {
   background-color: #99E2D0;
   width: 45px;
   height: 4px;
   margin-bottom: 2%;
   margin-left: 4%;
 }
-.carte footer {
+
+footer {
   background-color: rgb(44, 40, 40);
   display: flex;
   flex-direction: column;
   color: white;
 }
-.carte footer h3 {
+footer h3 {
   font-family: "Shrikhand", cursive;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.carte footer i {
+footer i {
   margin-right: 0.5%;
 }
-.carte footer a {
+footer a {
   margin-left: 4%;
   margin-top: 1%;
+  color: white;
+  text-decoration: none;
 }
+
 @media (max-width: 768px) {
-  .carte .h_restaurants {
+  .h_restaurants {
     display: flex;
     flex-direction: row;
   }
-  .carte .h_restaurants__titre {
+  .h_restaurants__titre {
     font-size: 30px;
     margin-left: 20%;
     text-shadow: none;
   }
-  .carte .h_restaurants__fleche {
+  .h_restaurants__fleche {
     padding-top: 9%;
     padding-left: 5%;
     font-weight: bold;
   }
-  .carte .bg_image {
+  .bg_image {
     max-width: 100%;
     max-height: 32rem;
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  .carte .img_enchante {
+  .img_enchante {
     max-height: 15rem;
     -o-object-position: 70% 77%;
        object-position: 70% 77%;
   }
-  .carte .titre {
-    font-size: 18px;
+  .titre {
+    font-size: 15px;
   }
-  .carte .titre i {
-    padding-top: 10%;
+  .titre i {
+    padding-top: 8%;
   }
-  .carte .carte {
+  .carte {
     border-radius: 20px 20px 20px 20px;
     box-shadow: 5px 5px 15px 0px #dedddd;
     padding-top: 1px;
@@ -241,27 +244,40 @@ h1 {
     margin-left: 3%;
     margin-right: 3%;
     overflow: hidden;
-    cursor: pointer;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     -webkit-animation-name: affichage;
             animation-name: affichage;
     -webkit-animation-duration: 2s;
             animation-duration: 2s;
   }
-  .carte .carte h3 {
+  .carte h3 {
     margin-bottom: 0%;
     margin-left: 2%;
+    text-overflow: ellipsis;
   }
-  .carte .carte__prix {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 2%;
+  .carte__texte {
+    width: 60%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .carte__prix {
+    width: 40%;
+    margin-left: 0%;
     margin-right: 2%;
   }
-  .carte .carte__prix p {
-    margin-top: 1%;
+  .carte__prix .price {
+    margin-top: 30%;
   }
-  .carte .carte:hover .animation_check {
-    margin-right: -15px;
+  .carte__prix .animation_check {
+    margin-right: -200px;
+    width: 150px;
+  }
+  .carte:hover__texte {
+    text-overflow: ellipsis;
+  }
+  .carte:hover .animation_check {
+    margin-right: -10px;
     margin-left: 5px;
   }
   @-webkit-keyframes affichage {
@@ -284,17 +300,17 @@ h1 {
       opacity: 1;
     }
   }
-  .carte .titre_plat {
+  .titre_plat {
     margin-left: 5%;
     margin-bottom: 0%;
     margin-top: 10%;
   }
-  .carte .bouton {
+  .bouton {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .carte .bouton input {
+  .bouton input {
     padding: 5%;
     border-radius: 30px 30px 30px 30px;
     background: linear-gradient(#FF79DA, #9356DC);
@@ -305,45 +321,45 @@ h1 {
     box-shadow: 0px 10px 10px 0px;
     font-size: 100%;
   }
-  .carte footer {
+  footer {
     background-color: rgb(44, 40, 40);
     display: flex;
     flex-direction: column;
     color: white;
   }
-  .carte footer h3 {
+  footer h3 {
     font-family: "Shrikhand", cursive;
     margin-left: 6%;
   }
-  .carte footer i {
+  footer i {
     margin-right: 4%;
   }
-  .carte footer a {
+  footer a {
     margin-left: 5%;
     margin-top: 4%;
   }
-  .carte section {
+  section {
     margin-top: -4rem;
     border-radius: 50px 50px 0 0;
     background-color: #f6f6f6;
     z-index: 1;
     position: relative;
   }
-  .carte .trait_entrees {
+  .trait_entrees {
     background-color: #99E2D0;
     width: 45px;
     height: 4px;
     margin-bottom: 5%;
     margin-left: 5%;
   }
-  .carte .trait_plats {
+  .trait_plats {
     background-color: #99E2D0;
     width: 38px;
     height: 4px;
     margin-bottom: 5%;
     margin-left: 5%;
   }
-  .carte .trait_desserts {
+  .trait_desserts {
     background-color: #99E2D0;
     width: 45px;
     height: 4px;
@@ -352,10 +368,10 @@ h1 {
   }
 }
 @media all and (min-width: 768px) and (max-width: 992px) {
-  .carte .h_restaurants__titre {
+  .h_restaurants__titre {
     margin-left: 23%;
   }
-  .carte .carte:hover .animation_check {
+  .carte:hover .animation_check {
     margin-right: -18px;
   }
 }/*# sourceMappingURL=restaurants.css.map */
