--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -10,18 +10,16 @@ body {
 h1 {
     font-family: 'Shrikhand', sans-serif;
 }
-
-
 .h_restaurants {
     display: flex;
     flex-direction: row;
     &__titre {
         font-size: 80px;
-        margin-left: 35%;
+        margin-left: 25%;
         text-shadow: 1px 1px 1px #9356DC;
     }
     &__fleche {
-        padding-top: 5%;
+        padding-top: 10%;
         padding-left: 5%;
         font-weight: bold;
     }
@@ -40,12 +38,15 @@ h1 {
     display: flex;
     justify-content: space-around;
     border-radius: 40px 40px 40px 40px;
-    i {
-        padding-top: 6%;
+    & i {
+        padding-top: 11%;
     }
 }
 
+
 .carte {
+    display: flex;
+    justify-content: space-between;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 5px 5px 15px 0px #dedddd;
     max-height: 100px;
@@ -57,72 +58,62 @@ h1 {
     // Carractéristiques animation affichage plats
     animation-name: affichage;
     animation-duration: 2s;
+    &__texte {
+        width: 50%;
+    }
+    & p {
+        margin-left: 2%;
+    }
     & h3 {
         margin-bottom: 0%;
         margin-left: 2%;
     }
     &__prix {
-        display: flex;
-        justify-content: space-between;
+        display: flex;  
+        justify-content: flex-end;
+        width: 50%;     
         margin-left: 2%;
-        margin-right: 2%;
-        p {
-            margin-top: 1%;
+        & .price {
+            margin-top: 3%;
+            margin-right: 3%;
+            font-weight: bold;
         }
         & .animation_check {
+            width: 80px;
             background-color: #99E2D0;
-            width: 100px;
-            height: 100px;
-            margin-top: -47px;
-            margin-right: -140px;
-            margin-left: 0%;
-            border-radius: 0px 20px 20px 0px; 
-            // overflow: hidden;
-            // transform: scale(.1);
-            // transform: rotate(-90deg);
-            // transition: transform 500ms ease-in-out;
+            height: 100%;
+            border-radius: 0px 20px 20px 0px;
+            margin-right: -80px;
+            & .i_check {
+                display: grid;
+                place-items: center;
+                padding-top: 40px;
+            }
+        }     
         }
+        &:hover .animation_check {
+            margin-right: 0%;
+            & .fas {
+                transform: rotate(-360deg);
+                transition: transform 500ms;
+            }
+        }        
         & i {
-            color: white;
-            display: flex;
-            justify-content:center;
-            align-items: center;
-            padding-top: 50px;
-        
+            color: white; 
         }
-    }
-    &:hover .animation_check {
-        margin-right: -40px;
-        // transform: rotate(360deg);
-        // transition: transform 500ms ease-in-out;
-       } 
+}
 
-    &:hover i {
-        transform: scale(0);
-        animation: rotation 2s;
-    }
-
-    @keyframes rotation {
-        0% {
-            transform: scale(0) rotate(0deg);
-        }
-        100% {
-            transform: scale(1) rotate(360deg);
-        }
-    }
-
-    
 
 
 
 //  Animation affichage plat
 @keyframes affichage {
     0% {
-        transform: translateY(20px);
+        transform: translateY(0);
         opacity: 0;
     }
     100% {
-        transform: rotateY(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
@@ -190,20 +181,23 @@ footer {
     display: flex;
     flex-direction: column;
     color: white;
-    h3 {
+    & h3 {
         font-family: 'Shrikhand', cursive ;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    i {
+    & i {
         margin-right: 0.5%;
     }
-    a {
+    & a {
         margin-left: 4%;
         margin-top: 1%;
+        color: white;
+        text-decoration: none;
     }
 }
+
 
 //  VERSION MOBILE 
 
@@ -214,9 +208,9 @@ footer {
     display: flex;
     flex-direction: row;
     &__titre {
-    font-size: 30px;
-    margin-left: 20%;
-    text-shadow: none;
+        font-size: 30px;
+        margin-left: 20%;
+        text-shadow: none;
     }
     &__fleche {
         padding-top: 9%;
@@ -238,9 +232,9 @@ footer {
 }
 
 .titre {
-    font-size: 18px;
+    font-size: 15px;
     i {
-        padding-top: 10%;
+        padding-top: 8%;
     }
 }
 
@@ -252,25 +246,39 @@ footer {
     margin-left: 3%;
     margin-right: 3%;
     overflow: hidden;
-    cursor: pointer;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     animation-name: affichage;
     animation-duration: 2s;
     & h3 {
         margin-bottom: 0%;
         margin-left: 2%;
+        text-overflow: ellipsis;
+    }
+    &__texte {
+        width: 60%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
     &__prix {
-        display: flex;
-        justify-content: space-between;
-        margin-left: 2%;
+        width: 40%;
+        margin-left: 0%;
         margin-right: 2%;
-        p {
-            margin-top: 1%;
+        & .price {
+            margin-top: 30%;
+        }
+        & .animation_check {
+            margin-right: -200px;
+            width: 150px;
         }
     }
     &:hover {
+        &__texte {
+            
+            text-overflow: ellipsis;
+        }
         & .animation_check {
-            margin-right: -15px;
+            margin-right: -10px;
             margin-left: 5px;
         }
     }
@@ -381,5 +389,4 @@ section {
       }
     }
 
-}
 }
